--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "lint": "./node_modules/.bin/eslint src"
   },
   "devDependencies": {
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
