--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,9 @@
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
     },
-    "extends": "airbnb"
+    "extends": "airbnb",
+    "env": {
+        "node": true,
+        "jest": true
+    }
 }
